--- a/index.html
+++ b/index.html
@@ -50,5 +50,28 @@
             </div>
         </nav>
     </div>
+    <!-- Callout -->
+    <div class="container-fluid callout-container">
+        <div class="opaque-overlay">&nbsp;</div>
+        <div class="row">
+            <div class="col-12">
+                <section class="callout jumbotron text-center">
+                    <br><br><br>
+                    <h1 class="jumbotron-header"><i>Perfect Fit Leggings</i></h1>
+                    <hr class="block-divider block-divider--orange">
+                    <p class="lead">Join us today and start receiving the 
+                    <br>world's best fitness leggings
+                    <br><i>Run and don't lose your 15% off discont!</i>
+                    <br><br>
+                    <button class="btn btn--cta btn--red" data-toggle="modal" data-target="#signUpModal">Join our mailing List!</button>
+                    <p class="text-muted"><small><i>Discount is not comulative</i></small></p>
+                    <hr class="block-divider block-divider--orange">
+                </section>
+            </div>
+        </div>
+    </div>
+    <!-- /.callout -->
+    
 </body>
+
 </html>
