--- a/index.html
+++ b/index.html
@@ -71,6 +71,93 @@
         </div>
     </div>
     <!-- /.callout -->
+    <!-- Products -->
+    <div class="container-wrapper">
+        <div class="container products-container content-container">
+            <section class="products">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase" id="new-arrivals">New Arrivals</h2>
+                        <hr class="block-divider block-divider--short">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture1.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€65,80<span class="badge badge-success">NEW!</span></p>
+                                    <h3>Rock Fancy Patches</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture2.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€75,85<span class="badge badge-success">NEW!</span></p>
+                                    <h3>Rock Fancy Line</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture3.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€55,70<span class="badge badge-success">NEW!</span></p>
+                                    <h3>Flowers Spring Leggings</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture4.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€65,80<span class="badge badge-success">NEW!</span></p>
+                                    <h3>Wine Leggings</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture5.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€55,70<span class="badge badge-success">NEW!</span></p>
+                                    <h3>Tan Leggings</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture6.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€65,80<span class="badge badge-success">NEW!</span></p>
+                                    <h3>Black & Gold</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
     
 </body>
 
