products second part

--- a/index.html
+++ b/index.html
@@ -158,6 +158,117 @@
             </section>
         </div>
     </div>
+    <div class="container-wrapper">
+        <div class="container products-container content-container">
+            <section class="products">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase" id="summer-collection"> <i class="fas fa-temperature-high"></i> Summer Colection </h2>
+                        <hr class="block-divider block-divider--short">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture7.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€78,88</p>
+                                    <h3>Wine Contour</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture8.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€80,85</p>
+                                    <h3>Tan Contour Leggings</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture9.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€85,77</p>
+                                    <h3>Light Pink</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture10.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€72,88</p>
+                                    <h3>Black & White</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture11.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€76,89</p>
+                                    <h3>Awesome Jeans</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture12.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€65,80</p>
+                                    <h3>Pink Leggings</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture19.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€71,89</p>
+                                    <h3>Wine Features</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture20.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>€62,89</p>
+                                    <h3>Awesome Brown</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
     
 </body>
 
