products third  part

--- a/index.html
+++ b/index.html
@@ -269,6 +269,101 @@
             </section>
         </div>
     </div>
+    <div class="container-wrapper">
+        <div class="container products-container content-container">
+            <section class="products">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase" id="on-sale">On Sale</h2>
+                        <hr class="block-divider block-divider--short">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture13.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>
+                                        <s class="d-none d-sm-inline">€78.88</s><span class="d-inline d-sm-none"><br></span><strong><mark><em>On Sale Now</em></mark></strong>
+                                        <br><strong>€65.88</strong><br>
+                                    </p>
+                                    <h3>Light Pink and White</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture14.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <s class="d-none d-sm-inline">€90.88</s><span class="d-inline d-sm-none"><br></span><strong><mark><em>On Sale Now</em></mark></strong>
+                                    <br><strong>€80.88</strong><br>
+                                    <h3>Black and Pink </h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture15.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <s class="d-none d-sm-inline">€76.77</s><span class="d-inline d-sm-none"><br></span><strong><mark><em>On Sale Now</em></mark></strong>
+                                        <br><strong>€64.20</strong><br>
+                                    <h3>Awesome Brown Original</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture16.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <s class="d-none d-sm-inline">€69.88</s><span class="d-inline d-sm-none"><br></span><strong><mark><em>On Sale Now</em></mark></strong>
+                                        <br><strong>€55.50</strong><br>
+                                    <h3>Wonderful Pink</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br><br><br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture17.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <s class="d-none d-sm-inline">€66.78</s><span class="d-inline d-sm-none"><br></span><strong><mark><em>On Sale Now</em></mark></strong>
+                                        <br><strong>€54.87</strong><br>
+                                    <h3>Colorful Print</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="media">
+                            <img src="images/Capture18.JPG">
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <s class="d-none d-sm-inline">€77.77</s><span class="d-inline d-sm-none"><br></span><strong><mark><em>On Sale Now</em></mark></strong>
+                                        <br><strong>€60.27</strong><br>
+                                    <h3>Tribal Print</h3>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+    <!-- /.products -->
     
 </body>
 
