features part one

--- a/index.html
+++ b/index.html
@@ -364,6 +364,76 @@
         </div>
     </div>
     <!-- /.products -->
+    <!-- Features -->
+    <div class="container-wrapper container-wrapper--aboutus">
+        <div class="container features-container content-container">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase" id="about-us">About Us:</h2>
+                        <hr class="block-divider block-divider--short block-divider--white">
+                    </div>
+                </div>
+                <br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <i class="fas fa-grin-hearts"></i>
+                            <h3>About A Perfect Fit</h3>
+                            <h5><em>Look great in 
+                            <br> Perfect Fit leggings!</em></h5>
+                            <br>
+                            <p>
+                                We source the best Brazilian Style  
+                                <br>leggings for our customers.
+                            </p>
+                            <p>
+                                We provide perfect leggings not just for 
+                                <br>going to the gym, but also suitable for  
+                                <br>day to day activities and social events.
+                            </p>
+                            <p>
+                                More than simply selling great clothing,  
+                                <br>we are focused on providing an overall  
+                                <br>wonderful customer experience.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <h3><i class="fas fa-credit-card d-none d-sm-block"></i> Payment Options</h3>
+                            <p>We accept: 
+                            <br>Visa, MasterCard and PayPal.</p>
+                            <br>
+                            <p><i class="fab fa-cc-visa"></i>
+                                <br><i class="fab fa-cc-mastercard"></i>
+                               <br> <i class="fab fa-cc-paypal"></i>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <i class="fas fa-truck"></i>
+                            <h3></i> Shipping Info</h3>
+                            <p>After payment is approved,
+                                <br>you will be notifed by e-mail, 
+                                <br>and then you can track your product.</p>
+                            <p> <span class="d-inline d-sm-none"><br></span><strong><mark>Delivery is free in Ireland!</mark></strong>
+                            <br><span class="d-inline d-sm-none"><br></span><strong><mark><em>3 working days</em></mark></strong></p>
+                            <p>International shipping:
+                            <ul>
+                                <li>UK: 10 working days</li>
+                                <li>EU: 12 working days</li>
+                                <li>USA: 15 working days</li>
+                                <li>Rest of the world: 20-30 working days</li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
     
 </body>
 
