features part two

--- a/index.html
+++ b/index.html
@@ -434,7 +434,52 @@
             </section>
         </div>
     </div>
-    
+    <div class="container-wrapper container-wrapper--aboutusinfo">
+        <div class="container features-container content-container">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase"> About Us </h2> <h2><i>Additional Info</i></h2>
+                        <hr class="block-divider block-divider--short block-divider--white">
+                    </div>
+                </div>
+                <br><br><br>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <i class="fas fa-exchange-alt"></i>
+                            <h3>Return Policy</h3>
+                            <p> Didn't you like your product? 
+                            <p>Very simple: keep the label  
+                                <br>on and send it back to us
+                                <br> within 30 days of delivery. 
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <i class="fas fa-lock"></i>
+                            <h3> Privacy Notice/Security</h3>
+                            <p>A Perfect Fit is committed to your security 
+                                <br>and privacy, we work in line with the 
+                                <br>General Data Protection Regulation
+                                <br> (GDPR).
+                                </p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <i class="fas fa-file-contract"></i>
+                            <h3> Terms and Conditions </h3>
+                            <p>We operate under the rules and guidelines
+                            <br>as set out by the Competition and 
+                            <br>Consumer Protection Commision (CCPC).
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>    
 </body>
 
 </html>
