features part three

--- a/index.html
+++ b/index.html
@@ -479,7 +479,50 @@
                 </div>
             </section>
         </div>
-    </div>    
+    </div>
+    <div class="container-wrapper container-wrapper--contactus">
+        <div class="container features-container content-container-contact-us">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase" id="contact-us">Contact Us:</h2>
+                        <hr class="block-divider block-divider--short block-divider--white">
+                    </div>
+                </div><br>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <i class="fas fa-at"></i>
+                            <h3> E-mail Us</h3>
+                            <p>info@aperfectfit.com</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="feature">
+                            <i class="fab fa-whatsapp"></i>
+                            <h3> Whats App</h3>
+                            <br>
+                            <p>(+353) 083 333 3333</p>
+                                <p>Monday-Thursday: 9:30 AM - 5:30 PM GMT
+                                <br>Friday: 9:30 AM- 4 PM GMT</p>
+                        </div>
+                    </div>
+                    <div class="col-12 d-md-none d-lg-block col-lg-4">
+                        <div class="feature">
+                            <i class="fas fa-map-marker-alt"></i> 
+                            <h3>Location</h3>
+                            <p>Dundrum Shopping Center<br>Dundrum, D14 <br> Dublin, Ireland</p>
+                            <a class="location-link" href="https://www.google.com/maps/place/Dundrum+Town+Centre/@53.288534,-6.24072,15z/data=!4m5!3m4!1s0x0:0x3e0c51d84ccc7fdb!8m2!3d53.287008!4d-6.2422669?hl=en-US" target="_blank">
+                                <em><small>Click here to access 
+                                <br>our location on
+                                <br>Google Maps</small></em></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </div>
+<!-- /.features -->     
 </body>
 
 </html>
